--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css?family=Dosis:800|Roboto:900" rel="stylesheet">
         <script src="jquery.min.js"></script>
+        <script src="https://embed.twitch.tv/embed/v1.js"></script>
         <script src="bluealliance.js"></script>
         <script src="index.js"></script>
     </head>
@@ -18,7 +19,9 @@
         </div>
         <div id="content">
             <img id="loadinggif" src="powercube.gif">
+            <img id="avatar"></img>
             <p id="teamheadline"></p>
+            <div id="stream"></div>
         </div>
     </body>
 </html>
