Added year selector and matches

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <img id="loadinggif" src="powercube.gif">
             <img id="avatar"></img>
             <p id="teamheadline"></p>
+            <div id="matches">
+            </div>
             <div id="stream"></div>
         </div>
     </body>
